# PortfolioIQ

./: .env.example  agent_instruction.md  docker-compose.yml  progress.md
backend/: alembic.ini  dev.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08c8ab56c54d_create_benchmark_comparisons_table.py  279d6fca6a47_market_data_tables.py  3c054b3c4423_initial_migration.py  506f33441a55_create_risk_metrics_table.py  d7d491041870_create_health_scores_table.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: auth.py  benchmark.py  benchmarks.py  health.py  holdings.py  market_data.py  portfolios.py  risk.py  router.py
backend/app/models/: __init__.py  benchmark_comparison.py  health_score.py  holding.py  instrument.py  portfolio.py  price_history.py  risk_metrics.py  transaction.py  user.py
backend/app/schemas/: auth.py  benchmark.py  common.py  health.py  holding.py  market_data.py  portfolio.py  risk.py
backend/app/services/: auth_service.py  benchmark_engine.py  cache_service.py  health_service.py  market_data_service.py  portfolio_service.py  risk_engine.py
backend/app/utils/: constants.py  csv_parser.py
backend/portfolioiq_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api_auth.py  test_api_portfolios.py  test_benchmark_engine.py  test_csv_parser.py  test_health_service.py  test_market_data_service.py  test_risk_engine.py
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  LANGGRAPH_ARCHITECTURE.md  MASTER_BUILD_PLAN.md
(+39 files in other folders)
